<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical">
    <FrameLayout
        android:id="@+id/f1_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screen_background"/>

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:foreground="@drawable/logo_name1"
            android:scaleType="center"
            app:tint="@color/white"/>


    </FrameLayout>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_login"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/title_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1_header_image"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:inputType="textWebEmailAddress"
            android:paddingTop="@dimen/et_padding"
            android:textColor="@color/design_default_color_primary"
            android:textSize="@dimen/et_textSize"
            android:text="abc@gmail.com"/>


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:paddingTop="@dimen/et_padding"
            android:textColor="@color/design_default_color_primary"
            android:textSize="@dimen/et_textSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/clickable_text_view_padding"
        android:text="@string/lbl_forget_password"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="@dimen/forget_password_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".activities.LoginActivity"-->
<!--    >-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:clipChildren="false"-->
<!--        android:clipToPadding="false"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="24dp"-->
<!--        android:paddingTop="16dp">-->

<!--        <ImageView-->
<!--            android:layout_width="64dp"-->
<!--            android:layout_height="64dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="48dp"-->
<!--            android:layout_marginBottom="10dp" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginBottom="132dp"-->
<!--            android:text="Hello"-->
<!--            android:textAllCaps="true"-->
<!--            android:textSize="16sp" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="4dp"-->
<!--            android:hint="Username">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->


<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="4dp"-->
<!--            android:hint="Password">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="textPassword"/>-->


<!--        </com.google.android.material.textfield.TextInputLayout>-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:text="Next"/>-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/next_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:text="Next"/>-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/cancel_button"-->
<!--                style="@style/Widget.MaterialComponents.Button.TextButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="12dp"-->
<!--                android:layout_marginRight="12dp"-->
<!--                android:layout_toStartOf="@+id/next_button"-->
<!--                android:layout_toLeftOf="@+id/next_button"-->
<!--                android:text="Cancel"/>-->

<!--        </RelativeLayout>-->

<!--    </LinearLayout>-->


<!--</ScrollView>-->